# InvestInsight

./: .gitignore  README.md  pyproject.toml
src/etl/: extract.py
tests/: test_investinsight.py
